Add link to slides and script
Signed-off-by: Belen Pena <belenbarrospena@gmail.com>

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
 					<section data-background="resources/tweet3.jpg"></section>
 
-					<section data-background="resources/tweet4.jpg"></section>										
+					<section data-background="resources/tweet4.jpg"></section>
 
 					<section>
 						<h2>Join us</h2>
@@ -383,9 +383,9 @@
 				<section>
 					<h1 style="text-align:left;">Thank you!</h1>
 					<p style="text-align:left;">Slides at</p>
-					<p style="text-align:left;font-size:.7em;"> <a href="https://belenbarrospena.github.io/no_design_without_research_lgm2019">https://belenbarrospena.github.io/no_design_without_research_lgm2019</a></p>
+					<p style="text-align:left;font-size:.7em;"> <a href="https://belenbarrospena.github.io/openly_good_hcid2019">https://belenbarrospena.github.io/openly_good_hcid2019</a></p>
 					<p style="text-align:left;">Script at</p>
-					<p style="text-align:left;font-size:.7em;"><a href="https://preview.tinyurl.com/yx9hpwg6">https://preview.tinyurl.com/yx9hpwg6</a></p>
+					<p style="text-align:left;font-size:.7em;"><a href="https://preview.tinyurl.com/yy8mn3sk">https://preview.tinyurl.com/yy8mn3sk</a></p>
 					<p style="text-align:left;margin-top:40px;">Get in touch</p>
 					<p style="text-align:left;font-size:.7em;"><a href="mailto:belenbarrospena@gmail.com">belenbarrospena@gmail.com</p>
 					<p style="text-align:left;font-size:.7em;"><a href="mailto:bernard@ei8fdb.org">bernard@ei8fdb.org</p>
